fix: row-gap

--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -54,9 +54,9 @@
     }
   }*/
 
-  @media (max-width: 1279px) {
+  @media (max-width: 1300px) {
     .movies-card-list__items {
-      row-gap: 36px;
+      row-gap: 48px;
       column-gap: 30px;
       grid-template-columns: repeat(auto-fit, minmax(339px, 1fr));
     }
